Update description text in index.html

--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
                         <p class="text-gray-400">
                             <i class="fas fa-cube mr-1"></i> ระบบจัดการสินค้าพื้นฐานด้วย Firebase
                         </p>
-                        <p class="text-gray-500 text-sm mt-1">สำหรับการเรียนรู้การเขียนโปรแกรมเบื้องต้น</p>
+                        <p class="text-gray-500 text-sm mt-1">ครบเครื่องเรื่องไอที</p>
                     </div>
                     <div class="flex space-x-4">
                         <a href="https://firebase.google.com/" target="_blank" class="text-gray-400 hover:text-indigo-400 transition-colors hover-effect">
