--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                 </form>
                 
                 <!-- Demo Accounts -->
-                <div class="mt-8 pt-6 border-t border-gray-700 animate__animated animate__fadeIn animate__delay-5s">
+                <!-- <div class="mt-8 pt-6 border-t border-gray-700 animate__animated animate__fadeIn animate__delay-5s">
                     <h3 class="text-sm font-medium text-gray-300 mb-3 flex items-center">
                         <i class="fas fa-info-circle mr-2 text-yellow-400"></i> บัญชีสำหรับทดสอบระบบ:
                     </h3>
@@ -777,7 +777,7 @@
                             <p class="text-gray-400 text-xs mt-1">สามารถใช้งานได้ทุกฟังก์ชัน รวมถึงการลบข้อมูลและจัดการผู้ใช้</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <!-- System Status -->
                 <div class="mt-6 p-3 bg-gray-900/30 rounded-lg animate__animated animate__fadeIn animate__delay-6s">
